Fixed footer spacing

--- a/assets/css/components/_footer.scss
+++ b/assets/css/components/_footer.scss
@@ -2,16 +2,20 @@
     text-align: center;
     color: $faint;
 
-    margin-top: 2rem;
-
 
     &__social {
+        margin-bottom: 0;
         &__icon {
             font-size: $h3;
-            margin: 0 1px;
+            margin: 0 2px;
             &:hover {
                 color: $primary-light;
             }
+
+        }
+
+        * {
+            margin-bottom: 0;
         }
     }
 
